# CRM-fast-api

./: .gitignore  main.py  pyproject.toml  zbpack.json
app/: config.py  main.py
app/models/: __init__.py  customer.py  email_campaign.py  email_log.py  event.py  event_registration.py  product.py  purchase.py
app/routers/: __init__.py  analytics.py  customers.py  email.py  events.py
app/schemas/: __init__.py  analytics.py  customer.py  email.py  event.py
app/services/: __init__.py  analytics.py  data_import.py  email_service.py  gmail_service.py  scheduler_service.py
app/static/: index.html
app/templates/: email_templates.py
scripts/: import_data.py
